--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
   <h1>Deploy automático con GitHub Actions + Surge.sh</h1>
+  <h1>¡Cambio de prueba!</h1>
+  <p>Este es un ejemplo de una página web estática desplegada automáticamente con GitHub Actions en Surge.sh.</p>
 </body>
 </html>
